--- a/html/beginning.html
+++ b/html/beginning.html
@@ -12,8 +12,20 @@
 
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
+
+    <link rel="stylesheet" href="../css/dialog.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <script src="../js/dialog.js"></script>
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
+
+<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
+    <p>下面这个动画由于是在绝对无错信道上传输，因此不会发生任何错误。</p>
+    <p>从下向上发的砖头代表“帧”，因为不会有错误，不需要“确认帧”。</p>
+    <p>右侧是传输过程的伪代码</p>
+</div>
+
 <div class="top-bar">
     <h1>乌托邦式的单工协议</h1>
 </div>
