--- a/html/dialog.html
+++ b/html/dialog.html
@@ -14,5 +14,21 @@
         <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
         <p>右侧是传输过程的伪代码</p>
     </div>
+    <div id="dialog_content1" title="说明">
+        <p>下面这个动画由于是在无错信道上传输，因此不会发生任何错误。</p>
+        <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+        <p>右侧是传输过程的伪代码</p>
+    </div>
+    <div id="dialog_content2" title="说明">
+        <p>在这个有错信道上，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
+        <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
+        <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+        <p>右侧是传输过程的伪代码</p>
+    </div>
+    <div id="dialog_content3" title="说明">
+        <p>下面这个动画由于是在无错信道上传输，因此不会发生任何错误。</p>
+        <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+        <p>右侧是传输过程的伪代码</p>
+    </div>
 </body>
 </html>
