--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -6,16 +6,21 @@
     <link rel="stylesheet" type="text/css" href="./../css/common.css">
     <link rel="stylesheet" type="text/css" href="./../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="../css/dialog.css">
+
 
     <!--js-->
     <script src="./../js/jquery-3.3.1.min.js"></script>
-
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
     <script src="../js/nowrong.js"></script>
+    <script src="../js/dialog.js"></script>
 
 </head>
 <body>
+
 <div class="top-bar">
     <h1>无错信道上的单工停-等协议</h1>
 </div>
