--- a/html/dialog.html
+++ b/html/dialog.html
@@ -9,7 +9,7 @@
     <script src="../js/dialog.js"></script>
 </head>
 <body>
-    <div id="dialog_content" title="说明">
+    <div id="dialog_content">
         <p>下面这个动画由于是在无错信道上传输，因此不会发生任何错误。</p>
         <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
         <p>右侧是传输过程的伪代码</p>
@@ -20,12 +20,18 @@
         <p>右侧是传输过程的伪代码</p>
     </div>
     <div id="dialog_content2" title="说明">
-        <p>在这个有错信道上，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
+        <p>在有错信道停等协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
         <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
         <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
         <p>右侧是传输过程的伪代码</p>
     </div>
     <div id="dialog_content3" title="说明">
+        <p>在有错信道回退N协议中，三号帧在传输过程中丢失，触发计时器超时，导致发送方重传3,4,5三个帧</p>
+        <p>七号帧的确认帧在传输过程中丢失，但八号帧确认帧顺利到达，由于累计确认原则，认为七号帧已送达，传输正常进行。</p>
+        <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+        <p>右侧是传输过程的伪代码</p>
+    </div>
+    <div id="dialog_content4" title="说明">
         <p>下面这个动画由于是在无错信道上传输，因此不会发生任何错误。</p>
         <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
         <p>右侧是传输过程的伪代码</p>
