--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -20,7 +20,11 @@
 
 </head>
 <body>
-
+<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
+    <p>下面这个动画由于是在无错信道上传输，因此不会发生任何错误。</p>
+    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+    <p>右侧是传输过程的伪代码</p>
+</div>
 <div class="top-bar">
     <h1>无错信道上的单工停-等协议</h1>
 </div>
