--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -13,8 +13,19 @@
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
     <script src="../js/rollbackN.js"></script>
+
+    <link rel="stylesheet" href="../css/dialog.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <script src="../js/dialog.js"></script>
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
+<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
+    <p>在有错信道回退N协议中，三号帧在传输过程中丢失，触发计时器超时，导致发送方重传3,4,5三个帧</p>
+    <p>七号帧的确认帧在传输过程中丢失，但八号帧确认帧顺利到达，由于累计确认原则，认为七号帧已送达，传输正常进行。</p>
+    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+    <p>右侧是传输过程的伪代码</p>
+</div>
 <div class="top-bar">
     <h1>回退N协议</h1>
 </div>
