--- a/html/beginning.html
+++ b/html/beginning.html
@@ -27,12 +27,13 @@
 </div>
 
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
-    <p>乌托邦式的无错信道在现实中存在吗</p>
+    <p>乌托邦式的无错信道在现实中存在吗<br></p>
     <form>
         <input type="radio" id="selection1" value="我是选项1" name="ques">存在，虽然我不知道在哪<br>
         <input type="radio" id="selection2" value="我是选项2" name="ques">不存在，这只是用来思考的理想化模型<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">不知道，万一存在呢<br>
+        <input type="radio" id="selection3" value="我是选项3" name="ques">不知道，万一存在呢<br><br>
     </form>
+    <p id="error" style="color: red;font-size: 18px"></p>
 </div>
 
 <div class="top-bar">
