--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="./images/beginning.jpg" alt="please wait" width="250.833px" height="188.125px">
                 </a>
                 <div class="info">
-                    <h3><a href="./html/background.html">从头开始-乌托邦式的单工协议<br></a></h3>
+                    <h3><a href="./html/pre_beginning.html">从头开始-乌托邦式的单工协议<br></a></h3>
                 </div>
             </div>
         </li>
