--- a/html/pre_beginning.html
+++ b/html/pre_beginning.html
@@ -16,7 +16,7 @@
     <script src="../js/atFault.js"></script>
 
 </head>
-<body onclick="jump()">
+<body id="body">
 <div class="top-bar">
 </div>
 <div class="title">
@@ -29,43 +29,67 @@
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
         <p style="font-size: 23px;line-height: 150%">
-            程序猿：发送方<br>
-            程序狗：接收方<br>
-            砖头：帧<br>
-            闹钟：定时器<br>
+            "程序猿"：发送方<br>
+            "程序狗"：接收方<br>
+            "砖头"：帧<br>
+            "闹钟"：定时器<br>
+            "确认"：确认帧<br>
         </p>
     </div>
     <div class="image-block-right">
         <img src="../images/program-dog.png" class="avatar-image-right">
     </div>
 </div>
-<div class="dialog-block">
-    <p id="show" class="dialog-text"></p>
-    <img src="../images/dialog-r.png" style="height: 40vh; width: 42vw">
-    <p id="word" class="dialog-text" style="display: none;">现在开始我给你发的砖头绝对不会在路上丢失或者出错！砖头也绝对都是好砖头！<br>你只管收了然后砌墙就对了！
-    </p>
+<div class="dialog-line">
+    <div class="dialog-block-monkey">
+        <img src="../images/dialog-r.png" style="height: 40vh; width: 42vw">
+        <p id="dia_mon_0" class="dialog-text-monkey">
+            由于一些原因，虽然我们身处异地，但是我需要给你送"砖头"。
+        </p>
+        <p id="dia_mon_1" class="dialog-text-monkey" hidden>
+            没错，而且可能你很难相信，但是只要出错了我们就会失业了。
+        </p>
+        <p id="dia_mon_2" class="dialog-text-monkey" hidden>
+            没关系，第一次送，有人给我们确保了一个绝对不会出错的完美"路线"，你只管放心收好传过来的"砖头"就行了。
+        </p>
+    </div>
+
+    <div class="dialog-block-dog">
+        <img src="../images/dialog.png" style="height: 40vh; width: 42vw">
+        <p id="dia_dog_0" class="dialog-text-dog" hidden>
+            what?送"砖头"???
+        </p>
+        <p id="dia_dog_1" class="dialog-text-dog" hidden>
+            好吧。但是怎么保证不会有失误啊，感觉很困难诶。
+        </p>
+    </div>
 </div>
+
 <div class="left-bar"></div>
 <div class="right-bar"></div>
 <div class="bottom-bar" id="bottom-bar"><br/></div>
 <script>
-    function jump() {
-        window.location.replace("beginning.html")
-    }
-</script>
-<script>
-    window.onload=function(){
-        var story = document.getElementById('word');
-        var s = document.getElementById('show');
-        var i = 0;
-        timer=setInterval(function(){
-            s.innerHTML=story.innerHTML.substring(0,i);
-            i++;
-            if(s.innerHTML==story.innerHTML){
-                clearInterval(timer);
-            }
-        },100);
-    }
+    var flag = 0;
+    $("#body").click(function () {
+        if (flag == 0) {
+            $("#dia_dog_0").fadeIn();
+        }
+        if (flag == 1) {
+            $("#dia_mon_0").fadeOut();
+            $("#dia_mon_1").fadeIn();
+        }
+        if (flag == 2) {
+            $("#dia_dog_0").fadeOut();
+            $("#dia_dog_1").fadeIn();
+        }if (flag == 3) {
+            $("#dia_mon_1").fadeOut();
+            $("#dia_mon_2").fadeIn();
+        }if (flag == 4) {
+            window.location.replace("beginning.html");
+        }
+
+        flag++;
+    })
 </script>
 </body>
 </html>
