--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -31,7 +31,8 @@
 </div>
 
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
-    <p>在有错信道停等协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
+    <p>在一位滑动窗口协议中，发送方和接收方的</p>
+    <p>在这个协议传输中，三号帧在传输过程中丢失，触发计时器超时，发送方重传该帧</p>
     <p>七号帧的确认帧在传输过程中丢失，触发计时器超时，发送方重传该帧。</p>
     <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
     <p>右侧是传输过程的伪代码</p>
