--- a/html/pre_atFault.html
+++ b/html/pre_atFault.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>乌托邦式的单工协议</title>
+    <title>有错停等</title>
     <link rel="stylesheet" type="text/css" href="./../css/common.css">
     <link rel="stylesheet" type="text/css" href="./../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-prepage.css">
 
     <!--js-->
     <script src="./../js/jquery-3.3.1.min.js"></script>
@@ -15,12 +14,17 @@
     <script src="./../js/linkLayerWidget.js"></script>
     <script src="../js/atFault.js"></script>
 
+    <link rel="stylesheet" href="../css/dialog.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <script src="../js/dialog.js"></script>
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="../css/style-prepage.css">
 </head>
 <body id="body">
 <div class="top-bar">
 </div>
 <div class="title">
-    <p>乌托邦式的单工协议</p>
+    <p>有错停等</p>
 </div>
 <div class="content">
     <div class="image-block-left">
@@ -44,23 +48,23 @@
     <div class="dialog-block-monkey">
         <img src="../images/dialog-r.png" style="height: 40vh; width: 42vw">
         <p id="dia_mon_0" class="dialog-text-monkey">
-            由于一些原因，虽然我们身处异地，但是我需要给你送"砖头"。
+            这第三次传"砖头"信道的质量有变差了，现在有可能会出错了。
         </p>
         <p id="dia_mon_1" class="dialog-text-monkey" hidden>
-            没错，而且可能你很难相信，但是只要出错了我们就会失业了。
+            对。不管是哪种问题都绝对不能出现。
         </p>
         <p id="dia_mon_2" class="dialog-text-monkey" hidden>
-            没关系，第一次送，有人给我们确保了一个绝对不会出错的完美"路线"，你只管放心收好传过来的"砖头"就行了。
+            好，那就还这么办，应该没问题。
         </p>
     </div>
 
     <div class="dialog-block-dog">
         <img src="../images/dialog.png" style="height: 40vh; width: 42vw">
         <p id="dia_dog_0" class="dialog-text-dog" hidden>
-            what?送"砖头"???
+            意思是"砖头"可能会丢失？我的"确认"也会丢失咯？
         </p>
         <p id="dia_dog_1" class="dialog-text-dog" hidden>
-            好吧。但是怎么保证不会有失误啊，感觉很困难诶。
+            那用和之前第二次无错停等时一样的策略似乎就可以解决诶。收到之后我还是会给你"确认",收到"确认"再给我发新的，不然就重新发一遍，保险一些。
         </p>
     </div>
 </div>
@@ -85,7 +89,7 @@
             $("#dia_mon_1").fadeOut();
             $("#dia_mon_2").fadeIn();
         }if (flag == 4) {
-            window.location.replace("beginning.html");
+            window.location.replace("atFault.html");
         }
 
         flag++;
