--- a/html/pre_nowrong.html
+++ b/html/pre_nowrong.html
@@ -2,25 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>乌托邦式的单工协议</title>
+    <title>无错信道上的单工停-等协议</title>
     <link rel="stylesheet" type="text/css" href="./../css/common.css">
     <link rel="stylesheet" type="text/css" href="./../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style-prepage.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="../css/dialog.css">
+
 
     <!--js-->
     <script src="./../js/jquery-3.3.1.min.js"></script>
-
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
-    <script src="../js/atFault.js"></script>
+    <script src="../js/nowrong.js"></script>
+    <script src="../js/dialog.js"></script>
+    <link rel="stylesheet" href="../css/style-prepage.css">
 
 </head>
 <body id="body">
 <div class="top-bar">
 </div>
 <div class="title">
-    <p>乌托邦式的单工协议</p>
+    <p>无错信道上的单工停-等协议</p>
 </div>
 <div class="content">
     <div class="image-block-left">
@@ -44,23 +48,23 @@
     <div class="dialog-block-monkey">
         <img src="../images/dialog-r.png" style="height: 40vh; width: 42vw">
         <p id="dia_mon_0" class="dialog-text-monkey">
-            由于一些原因，虽然我们身处异地，但是我需要给你送"砖头"。
+            这次用来传"砖头"的信道似乎不能保证无错了。
         </p>
         <p id="dia_mon_1" class="dialog-text-monkey" hidden>
-            没错，而且可能你很难相信，但是只要出错了我们就会失业了。
+            就是理论上不会出错，但万一出错，我们就完了。
         </p>
         <p id="dia_mon_2" class="dialog-text-monkey" hidden>
-            没关系，第一次送，有人给我们确保了一个绝对不会出错的完美"路线"，你只管放心收好传过来的"砖头"就行了。
+            好，那就这么办，没有错的话我就一直发了。
         </p>
     </div>
 
     <div class="dialog-block-dog">
         <img src="../images/dialog.png" style="height: 40vh; width: 42vw">
         <p id="dia_dog_0" class="dialog-text-dog" hidden>
-            what?送"砖头"???
+            这是什么意思？
         </p>
         <p id="dia_dog_1" class="dialog-text-dog" hidden>
-            好吧。但是怎么保证不会有失误啊，感觉很困难诶。
+            那我每次收到砖头就跟你说一声，确认一下，收到确认你再发新的吧。慢慢来这样就不会出错了吧。
         </p>
     </div>
 </div>
@@ -85,7 +89,7 @@
             $("#dia_mon_1").fadeOut();
             $("#dia_mon_2").fadeIn();
         }if (flag == 4) {
-            window.location.replace("beginning.html");
+            window.location.replace("nowrong.html");
         }
 
         flag++;
