all dialog and pre&post

--- a/html/atFault.html
+++ b/html/atFault.html
@@ -53,8 +53,8 @@
     <img id="blocks6" class="blocks" src="../images/blocks.png">
     <img id="blocks7" class="blocks" src="../images/blocks.png">
     <img id="blocks8" class="blocks" src="../images/blocks.png">
-    <img id="newBlocks2" class="blocks" src="../images/blocks.png">
-    <img id="newBlocks6" class="blocks" src="../images/blocks.png">
+    <img id="newBlocks2" class="blocks new-blocks" src="../images/blocks.png">
+    <img id="newBlocks6" class="blocks new-blocks" src="../images/blocks.png">
 
     <img id="affirm0" class="affirm" src="../images/affirm.png">
     <img id="affirm1" class="affirm" src="../images/affirm.png">
@@ -69,6 +69,11 @@
     <img id="timer1" class="timer" src="../images/timer.jpg">
     <img id="timer2" class="timer" src="../images/timer.jpg">
     <img id="newAffirm6" class="affirm" src="../images/affirm.png">
+
+    <img id="no1" class="no" src="../images/no.png">
+    <img id="no2" class="no" src="../images/no.png">
+
+    <img id="lost" class="lost" src="../images/lost.jpg">
 
 </div>
 
@@ -87,8 +92,8 @@
         <p id="code13">&nbsp;&nbsp;if( 帧到达 ）</p>
         <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;if( 该帧序号为 i )</p>
         <p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接收该帧传给网络层</p>
-        <p id="code16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;发送序号为 i 的确认帧给发送方</p>
-        <p id="code17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;确认帧的序号 i ++</p>
+        <p id="code16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;确认帧的序号 i ++</p>
+        <p id="code17">&nbsp;&nbsp;&nbsp;&nbsp;回送最后接收的确认帧给发送方</p>
         <p id="code18"style="padding-bottom: 10px;">}</p>
     </div>
     <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
