--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="../css/dialog.css">
 
-
     <!--js-->
     <script src="./../js/jquery-3.3.1.min.js"></script>
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
@@ -71,7 +70,7 @@
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
 
 <div class="receive">
-    <div id="status_r" class="panel status status_r"><p>接收成功！</p></div>
+    <div id="status_r" class="panel status status_r"><p></p></div>
     <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
     <!--伪代码部分-->
     <div id="codetrace_r"class="panel codetrace codetrace_r">
