--- a/html/new-beginning.html
+++ b/html/new-beginning.html
@@ -20,7 +20,6 @@
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
-
 <div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
     <p>下面这个动画由于是在绝对无错信道上传输，因此不会发生任何错误。</p>
     <p>从下向上发的砖头代表“帧”，因为不会有错误，不需要“确认帧”。</p>
@@ -36,24 +35,14 @@
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
-
 <div class="top-bar">
     <h1>乌托邦式的单工协议</h1>
 </div>
 <div id="box">
     <img id="program-dog" class="program-dog" src="../images/program-dog.png">
     <img id="program-monkey" class="program-monkey" src="../images/program-monkey.png">
-    <img id="bottom0" class="bottom" src="../images/bottom.png">
-    <img id="bottom1" class="bottom" src="../images/bottom.png">
-    <img id="blocks0" class="blocks" src="../images/blocks.png">
-    <img id="blocks1" class="blocks" src="../images/blocks.png">
-    <img id="blocks2" class="blocks" src="../images/blocks.png">
-    <img id="blocks3" class="blocks" src="../images/blocks.png">
-    <img id="blocks4" class="blocks" src="../images/blocks.png">
-    <img id="blocks5" class="blocks" src="../images/blocks.png">
-    <img id="blocks6" class="blocks" src="../images/blocks.png">
-    <img id="blocks7" class="blocks" src="../images/blocks.png">
-    <img id="blocks8" class="blocks" src="../images/blocks.png">
+    <div id="video1"><video id="video" src="../video/prefect.mp4"></video></div>
+    
 
 </div>
 
@@ -62,10 +51,11 @@
 </div>
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
 
+<!--
 <div class="receive">
     <div id="status_r" class="panel status status_r"><p></p></div>
     <div id="status-hide_r" class="panel-hide status-hide status-hide_r"><img src="./../images/arrow_black_right.png" alt="&gt;" class="rotateRight"></div>
-    <!--伪代码部分-->
+    伪代码部分
     <div id="codetrace_r"class="panel codetrace codetrace_r">
         <p id="code11" style="padding-top: 10px;">while(等待帧){</p>
         <p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>
@@ -75,12 +65,14 @@
     <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
         <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
 </div>
+-->
 
+<!--
 
 <div class="send">
     <div id="status" class="panel status status_s"><p></p></div>
     <div id="status-hide" class="panel-hide status-hide status-hide_s"><img src="./../images/arrow_black_right.png"></div>
-    <!--伪代码部分-->
+    伪代码部分
     <div id="codetrace" class="panel codetrace codetrace_s">
         <p id="code1" style="padding-top: 10px;">第一个帧的序号为 i = 1 </p>
         <p id="code2">do{</p>
@@ -91,6 +83,7 @@
     <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
         <img src="./../images/arrow_white_right.png"></div>
 </div>
+-->
 
 <div class="left-bar"></div>
 <div class="right-bar"></div>
@@ -120,7 +113,6 @@
             }
         }, 500);
     }
-
 
 </script>
 
