--- a/html/pre_RBN.html
+++ b/html/pre_RBN.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>一位滑动窗口协议</title>
+    <title>回退N协议</title>
     <link rel="stylesheet" type="text/css" href="./../css/common.css">
     <link rel="stylesheet" type="text/css" href="./../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +12,7 @@
 
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
-    <script src="../js/slidingWindow.js"></script>
+    <script src="../js/rollbackN.js"></script>
 
     <link rel="stylesheet" href="../css/dialog.css">
     <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
@@ -25,7 +25,7 @@
 <div class="top-bar">
 </div>
 <div class="title">
-    <p>一位滑动窗口协议</p>
+    <p>回退N协议</p>
 </div>
 <div class="content">
     <div class="image-block-left">
@@ -49,26 +49,26 @@
     <div class="dialog-block-monkey">
         <img src="../images/dialog-r.png" style="height: 28vh; width: 30vw">
         <p id="dia_mon_0" class="dialog-text-monkey">
-            这第四次传输"砖头"，好像信道本身没有什么变化，但上级说之后会要求我们提高效率，让我们先做起准备。
+            上级终于说要我们传输"砖头"的速度太慢了，要让我们提高效率了。
         </p>
         <p id="dia_mon_1" class="dialog-text-monkey" hidden>
-            咱们换个思路，我不再每次只发送一个帧了。我会维护一个"发送窗口"，每次我只发在发送窗口里的"砖头"，而且不等你的确认帧了，你一个一个收就行。
+            嗯，我把窗口设置为3你看怎么样，不算慢也不算太快，你觉得怎么样？
         </p>
         <p id="dia_mon_2" class="dialog-text-monkey" hidden>
-            行，收到你的"确认"之后我再移动我的发送窗口，发之后的"砖头",在收到之前我都会等你的。
+            好吧。给我们这个跨世纪的方案起个名字吧。因为如果你有一个没收到，我就需要退回窗口最初的那个帧把三个帧全都重新发一遍。就叫回退N吧。
         </p>
     </div>
 
     <div class="dialog-block-dog">
         <img src="../images/dialog.png" style="height: 28vh; width: 30vw">
         <p id="dia_dog_0" class="dialog-text-dog" hidden>
-            天哪，这要怎么办，有什么办法能发的更快吗？
+            好。那就按照我们之前说的滑动窗口的方案来吧。
         </p>
         <p id="dia_dog_1" class="dialog-text-dog" hidden>
-            但是你也不要发的太快了，咱们提前商量好你的"发送窗口"的大小，不然我收不过来。这次"发送窗口"就先定为1，咱们练练手。
+            没问题。我还是一次只收一个，假如不是按照"砖头"的顺序到的，我就不收了，也不回发"确认"。你三个都重新发一遍吧。
         </p>
         <p id="dia_dog_2" class="dialog-text-dog" hidden>
-            好。那咱们就开始吧！
+            不错，那开始吧。
         </p>
     </div>
 </div>
@@ -96,7 +96,7 @@
             $("#dia_dog_1").fadeOut();
             $("#dia_dog_2").fadeIn();
         }if (flag == 5) {
-            window.location.replace("slidingWindow.html");
+            window.location.replace("rollbackN.html");
         }
 
         flag++;
