--- a/html/selective_repeat.html
+++ b/html/selective_repeat.html
@@ -13,8 +13,32 @@
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
     <script src="../js/selective_repeat.js"></script>
+
+    <link rel="stylesheet" href="../css/dialog.css">
+    <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <script src="../js/dialog.js"></script>
+    <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
+
+<div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
+    <p>选择回传协议与回退N协议相比，接收窗口大小从1变成3意味着什么？<br></p>
+    <form>
+        <input type="radio" id="selection1" value="我是选项1" name="ques">没有什么变化，接收方该是什么样还是什么样<br>
+        <input type="radio" id="selection2" value="我是选项2" name="ques">有，意味着接收方需要有缓存机制了，因为它需要将不按顺序到达的帧先接受并且存下来。<br>
+        <input type="radio" id="selection3" value="我是选项3" name="ques">有，意味着接收窗口变大了！<br><br>
+    </form>
+    <p id="error" style="font-size: 18px"></p>
+</div>
+<body>
+<div id="dialog_content" title="说明" style="font-size: 21px;line-height: 150%">
+    <p>在选择回传协议中，发送方与接收方都维护一个窗口，分别表示能发送的帧和能接受的帧。只要出现在接收窗口内的帧，接收方都会接受并缓存，等全部到达后转交网络层。<br></p>
+    <p>动画中三号帧丢失触发超时，接收方收下到达的4,5号帧，并在收到发送方重传的三号帧后，两方的窗口下限同时移到六号帧。<br></p>
+    <p>同样，接收方七号帧的确认帧丢失，触发超时，但是收下八号帧。并在收到重传的七号帧后，再次回传七号帧的确认帧，发送方收到确认帧后，双方的窗口下限同时移到九号帧</p>
+    <p>从下向上发的砖头代表“帧”，从上向下发的 √ 表示“确认帧”。</p>
+    <p>右侧是传输过程的伪代码</p>
+</div>
+
 <div class="top-bar">
     <h1>选择重传协议</h1>
 </div>
@@ -51,9 +75,14 @@
     <img id="timer0" class="timer" src="../images/quitTimer.jpg">
     <img id="timer1" class="timer" src="../images/timer.jpg">
     <img id="timer2" class="timer" src="../images/timer.jpg">
+    <img id="newAffirm11" class="affirm" src="../images/affirm.png">
+    <img id="newAffirm12" class="affirm" src="../images/affirm.png">
+    <img id="newAffirm2" class="affirm" src="../images/affirm.png">
     <img id="newAffirm3" class="affirm" src="../images/affirm.png">
     <img id="newAffirm4" class="affirm" src="../images/affirm.png">
     <img id="newAffirm5" class="affirm" src="../images/affirm.png">
+    <img id="newAffirm51" class="affirm" src="../images/affirm.png">
+    <img id="newAffirm52" class="affirm" src="../images/affirm.png">
     <img id="newAffirm6" class="affirm" src="../images/affirm.png">
     <img id="newAffirm7" class="affirm" src="../images/affirm.png">
     <img id="newAffirm8" class="affirm" src="../images/affirm.png">
@@ -62,6 +91,7 @@
     <img id="no1" class="no" src="../images/no.png">
     <img id="no2" class="no" src="../images/no.png">
     
+    <img id="lost" class="lost" src="../images/lost.jpg">
     </div>
 <div id="actions" class="panel">
     <p id="selective_repeat" onclick=selective_repeat()>创建</p>
@@ -74,14 +104,11 @@
     <!--伪代码部分-->
     <div id="codetrace_r"class="panel codetrace codetrace_r">
         <p id="code11" style="padding-top: 5px;">while(等待事件){</p>
-        <p id="code12">&nbsp;&nbsp;if( 帧到达 ）</p>
-        <p id="code13">&nbsp;&nbsp;&nbsp;&nbsp;if( 该帧为期望接收的帧 )</p>
-        <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;接收该帧</p>
-        <p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;将缓存中与其连续的帧排序后交给网络层</p>
-        <p id="code16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;将窗口下限移至第一个未接收的帧处</p>
-        <p id="code17">&nbsp;&nbsp;&nbsp;&nbsp;else if ( 该帧序号落在接收窗口内 )</p>
-        <p id="code18">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;缓存该帧</p>
-        <p id="code19"style="padding-bottom: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>
+        <p id="code12">&nbsp;&nbsp;if( 期望帧到达 )</p>
+        <p id="code14">&nbsp;&nbsp;&nbsp;&nbsp;接收该帧,滑动接收窗口</p>
+        <p id="code15">&nbsp;&nbsp;&nbsp;&nbsp;将缓存中与其连续的帧排序后交给网络层</p>
+        <p id="code16">&nbsp;&nbsp;else if ( 到达帧在接收窗口内 ) 缓存该帧</p>
+        <p id="code17"style="padding-bottom: 10px;">&nbsp;&nbsp;发送序号为窗口下限序号-1帧的确认帧</p>
     </div>
     <div id="codetrace-hide_r" class="panel-hide codetrace-hide codetrace-hide_r">
         <img src="./../images/arrow_white_right.png" alt="&gt;" class="rotateRight"></div>
@@ -94,13 +121,14 @@
     <!--伪代码部分-->
     <div id="codetrace" class="panel codetrace codetrace_s">
         <p id="code1" style="padding-top: 5px;">do{</p>
-        <p id="code2">&nbsp;&nbsp;依次发送窗口内所有未发送的帧</p>
+        <p id="code2">&nbsp;&nbsp;依次发送窗口内帧</p>
         <p id="code3">&nbsp;&nbsp;为每个帧设定计时器</p>
         <p id="code4">&nbsp;&nbsp;if（ 规定时间内收到期望的确认帧 )</p>
         <p id="code5">&nbsp;&nbsp;&nbsp;&nbsp;释放确认帧所占缓冲区，滑动发送窗口</p>
         <p id="code6">&nbsp;&nbsp;&nbsp;&nbsp;停止窗口外帧的计时器</p>
-        <p id="code8">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ) </p>
-        <p id="code9">&nbsp;&nbsp;&nbsp;&nbsp;重发超时的计时器对应的帧,并重设计时器</p>
+        <p id="code7">&nbsp;&nbsp;else if ( 期望帧的计时器超时 ) </p>
+        <p id="code8">&nbsp;&nbsp;&nbsp;&nbsp;重发超时的计时器对应的帧,并重设计时器</p>
+        <p id="code9">&nbsp;&nbsp;else if ( 收到非期望确认帧 )丢弃该帧</p>
         <p id="code10" style="padding-bottom: 10px;">}while ( 还有未传输成功的帧 )</p>
     </div>
     <div id="codetrace-hide" class="panel-hide codetrace-hide codetrace-hide_s">
