add connection between pages click queding will lead to the next page

--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -15,7 +15,7 @@
     <script src="./../js/common.js"></script>
     <script src="./../js/linkLayerWidget.js"></script>
     <script src="../js/nowrong.js"></script>
-    <script src="../js/dialog.js"></script>
+    <script src="../js/dialog-2.js"></script>
 
 </head>
 <body>
