--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../css/dialog.css">
     <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
-    <script src="../js/dialog.js"></script>
+    <script src="../js/dialog-5.js"></script>
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
