--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../css/dialog.css">
     <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
-    <script src="../js/dialog.js"></script>
+    <script src="../js/dialog-4.js"></script>
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
@@ -25,8 +25,8 @@
     <p>这个模型与之前看到的有错信道的停等协议一样吗？<br></p>
     <form>
         <input type="radio" id="selection1" value="我是选项1" name="ques">显然没有什么区别<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">有区别，这个协议将思想抽象为了滑动窗口的思想，更利于协议的进一步发展与完善<br>
-        <input type="radio" id="selection3" value="我是选项3" name="ques">有区别，名字不一样<br><br>
+        <input type="radio" id="selection2" value="我是选项2" name="ques">有区别，名字不一样<br>
+        <input type="radio" id="selection3" value="我是选项3" name="ques">有区别，这个协议将思想抽象为了滑动窗口的思想，更利于协议的进一步发展与完善<br><br>
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
 </div>
