--- a/html/atFault.html
+++ b/html/atFault.html
@@ -16,15 +16,15 @@
 
     <link rel="stylesheet" href="../css/dialog.css">
     <link rel="stylesheet" href="../js/jquery-ui-1.12.1.custom/jquery-ui.min.css">
-    <script src="../js/dialog.js"></script>
+    <script src="../js/dialog-3.js"></script>
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
 <div id="question" title="提问" style="font-size: 21px;line-height: 150%;">
     <p>假设正常传输到5号帧时，5号帧在传输过程中丢失了，之后会发生什么？<br></p>
     <form>
-        <input type="radio" id="selection1" value="我是选项1" name="ques">发送方立刻重传五号帧<br>
-        <input type="radio" id="selection2" value="我是选项2" name="ques">发送方等待计时器超时后重传五号帧<br>
+        <input type="radio" id="selection1" value="我是选项1" name="ques">发送方等待计时器超时后重传五号帧<br>
+        <input type="radio" id="selection2" value="我是选项2" name="ques">发送方立刻重传五号帧<br>
         <input type="radio" id="selection3" value="我是选项3" name="ques">发送方不管五号帧继续往下发<br><br>
     </form>
     <p id="error" style="color: red;font-size: 18px"></p>
