--- a/html/test.html
+++ b/html/test.html
@@ -7,6 +7,7 @@
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../css/dialog.css">
+    <script src="../js/bootstrap.js"></script>
 </head>
 <body>
 
