--- a/html/atFault.html
+++ b/html/atFault.html
@@ -40,8 +40,8 @@
 </div>
 
 <div id="box">
-    <img id="program-dog" class="program-dog" src="../images/program-dog.png">
-    <img id="program-monkey" class="program-monkey" src="../images/program-monkey.png">
+    <img id="program-dog" class="program-dog" src="../images/dog.gif">
+    <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <img id="bottom0" class="bottom" src="../images/bottom.png">
     <img id="bottom1" class="bottom" src="../images/bottom.png">
     <img id="blocks0" class="blocks" src="../images/blocks.png">
