--- a/html/background.html
+++ b/html/background.html
@@ -25,7 +25,7 @@
 <div class="content">
     <div class="content-side">
         <div class="image-block">
-            <img src="../images/program-monkey.png" class="avatar-image">
+            <img src="../images/monkey.gif" class="avatar-image">
         </div>
     </div>
     <div class="description">
@@ -35,7 +35,7 @@
         <p id="show"></p>
     </div>
     <div class="image-block">
-        <img src="../images/program-dog.png" class="avatar-image">
+        <img src="../images/dog.gif" class="avatar-image">
     </div>
 </div>
 <div class="left-bar"></div>
@@ -43,7 +43,7 @@
 <div class="bottom-bar" id="bottom-bar"><br/></div>
 <script>
     function jump() {
-        window.location.replace("pre_beginning.html")
+        window.location.href="pre_beginning.html"
     }
 </script>
 <script>
