--- a/html/pre_atFault.html
+++ b/html/pre_atFault.html
@@ -28,7 +28,7 @@
 </div>
 <div class="content">
     <div class="image-block-left">
-        <img src="../images/program-monkey.png" class="avatar-image-left">
+        <img src="../images/monkey.gif" class="avatar-image-left">
     </div>
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
@@ -41,7 +41,7 @@
         </p>
     </div>
     <div class="image-block-right">
-        <img src="../images/program-dog.png" class="avatar-image-right">
+        <img src="../images/dog.gif" class="avatar-image-right">
     </div>
 </div>
 <div class="dialog-line">
@@ -89,7 +89,7 @@
             $("#dia_mon_1").fadeOut();
             $("#dia_mon_2").fadeIn();
         }if (flag == 4) {
-            window.location.replace("atFault.html");
+            window.location.href=("atFault.html");
         }
 
         flag++;
