--- a/html/dialog_begin.html
+++ b/html/dialog_begin.html
@@ -24,7 +24,7 @@
 </div>
 <div class="content">
     <div class="image-block-left">
-        <img src="../images/program-monkey.png" class="avatar-image-left">
+        <img src="../images/monkey.gif" class="avatar-image-left">
     </div>
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
@@ -36,7 +36,7 @@
         </p>
     </div>
     <div class="image-block-right">
-        <img src="../images/program-dog.png" class="avatar-image-right">
+        <img src="../images/dog.gif" class="avatar-image-right">
     </div>
 </div>
 <div class="dialog-block">
