--- a/html/new-beginning.html
+++ b/html/new-beginning.html
@@ -39,8 +39,8 @@
     <h1>乌托邦式的单工协议</h1>
 </div>
 <div id="box">
-    <img id="program-dog" class="program-dog" src="../images/program-dog.png">
-    <img id="program-monkey" class="program-monkey" src="../images/program-monkey.png">
+    <img id="program-dog" class="program-dog" src="../images/dog.gif">
+    <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <div id="video1"><video id="video" src="../video/prefect.mp4"></video></div>
     
 
