--- a/html/pre_SR.html
+++ b/html/pre_SR.html
@@ -28,7 +28,7 @@
 </div>
 <div class="content">
     <div class="image-block-left">
-        <img src="../images/program-monkey.png" class="avatar-image-left">
+        <img src="../images/monkey.gif" class="avatar-image-left">
     </div>
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
@@ -41,7 +41,7 @@
         </p>
     </div>
     <div class="image-block-right">
-        <img src="../images/program-dog.png" class="avatar-image-right">
+        <img src="../images/dog.gif" class="avatar-image-right">
     </div>
 </div>
 <div class="dialog-line">
@@ -95,7 +95,7 @@
             $("#dia_dog_1").fadeOut();
             $("#dia_dog_2").fadeIn();
         }if (flag == 5) {
-            window.location.replace("selective_repeat.html");
+            window.location.href=("selective_repeat.html");
         }
 
         flag++;
