--- a/html/pre_SW.html
+++ b/html/pre_SW.html
@@ -29,7 +29,7 @@
 </div>
 <div class="content">
     <div class="image-block-left">
-        <img src="../images/program-monkey.png" class="avatar-image-left">
+        <img src="../images/monkey.gif" class="avatar-image-left">
     </div>
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
@@ -42,7 +42,7 @@
         </p>
     </div>
     <div class="image-block-right">
-        <img src="../images/program-dog.png" class="avatar-image-right">
+        <img src="../images/dog.gif" class="avatar-image-right">
     </div>
 </div>
 <div class="dialog-line">
@@ -96,7 +96,7 @@
             $("#dia_dog_1").fadeOut();
             $("#dia_dog_2").fadeIn();
         }if (flag == 5) {
-            window.location.replace("slidingWindow.html");
+            window.location.href=("slidingWindow.html");
         }
 
         flag++;
