--- a/html/pre_beginning.html
+++ b/html/pre_beginning.html
@@ -24,7 +24,7 @@
 </div>
 <div class="content">
     <div class="image-block-left">
-        <img src="../images/program-monkey.png" class="avatar-image-left">
+        <img src="../images/monkey.gif" class="avatar-image-left">
     </div>
     <div class="middle">
         <img src="../images/clock.png" class="middle-image">
@@ -37,7 +37,7 @@
         </p>
     </div>
     <div class="image-block-right">
-        <img src="../images/program-dog.png" class="avatar-image-right">
+        <img src="../images/dog.gif" class="avatar-image-right">
     </div>
 </div>
 <div class="dialog-line">
@@ -85,7 +85,7 @@
             $("#dia_mon_1").fadeOut();
             $("#dia_mon_2").fadeIn();
         }if (flag == 4) {
-            window.location.replace("beginning.html");
+            window.location.href="beginning.html";
         }
 
         flag++;
