--- a/new-index.html
+++ b/new-index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style-index.css">
-    <link rel="stylesheet" type="text/css" href="./css/common.css">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
+
 </head>
 <body>
-<!--<div class="top-bar">-->
-    <!--<h1>计网链路层模型可视化（小课堂）</h1>-->
-<!--</div>-->
 <h1>计网链路层模型可视化（小课堂）</h1>
 <p>本站为想要了解计算机网络链路层模型的一般学生，以及想要直观理解链路层模型的计算机专业学生提供一个可视化的动画展示与教学。</p>
+<p>我们将以一个虚拟的卡通故事为主线，融合动画演示，来解释每一个链路层的模型。</p>
+<p>（程序猿和程序狗因为老板的蛮横的命令，在北京的程序猿必须给在上海的程序狗送砖头过去才行，他们需要保证不出任何差错地完成任务，还需要满足老板日益增加的效率需求。）</p>
 
 <!--<p><input type="checkbox" id="accordion-toggle"><label for="accordion-toggle">Keep animations but remove auto-collapse effect </label></p>-->
 
@@ -84,7 +82,6 @@
 
 <script  src="js/index.js"></script>
 <script src="js/navigate.js"></script>
-
 
 </body>
 </html>
