--- a/html/beginning.html
+++ b/html/beginning.html
@@ -41,6 +41,7 @@
     <h1>乌托邦式的单工协议</h1>
 </div>
 <div id="box">
+<!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <img id="bottom0" class="bottom" src="../images/bottom.png">
@@ -54,6 +55,8 @@
     <img id="blocks6" class="blocks" src="../images/blocks.png">
     <img id="blocks7" class="blocks" src="../images/blocks.png">
     <img id="blocks8" class="blocks" src="../images/blocks.png">
+-->
+    <video src="../video/prefect1.mp4" id="video" class="video"></video>
 
 </div>
 
