--- a/html/nowrong.html
+++ b/html/nowrong.html
@@ -38,6 +38,7 @@
 </div>
 
 <div id="box">
+<!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <img id="bottom0" class="bottom" src="../images/bottom.png">
@@ -61,6 +62,8 @@
     <img id="affirm6" class="affirm" src="../images/affirm.png">
     <img id="affirm7" class="affirm" src="../images/affirm.png">
     <img id="affirm8" class="affirm" src="../images/affirm.png">
+-->
+    <video src="../video/nowrong1.mp4" id="video" class="video"></video>
 
 </div>
 
