--- a/html/rollbackN.html
+++ b/html/rollbackN.html
@@ -40,6 +40,7 @@
     <h1>回退N协议</h1>
 </div>
 <div id="box">
+<!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <img id="bottom0" class="bottom" src="../images/bottom.png">
@@ -88,6 +89,8 @@
     <img id="no2" class="no" src="../images/no.png">
     
     <img id="lost" class="lost" src="../images/lost.jpg">
+-->
+    <video src="../video/rollbackN1.mp4" id="video" class="video"></video>
     </div>
 <div id="actions" class="panel">
     <p id="rollbackN" onclick=rollbackN()>创建</p>
