--- a/html/slidingWindow.html
+++ b/html/slidingWindow.html
@@ -46,6 +46,7 @@
     <p id="SlidingWindow" onclick=SlidingWindow()>创建</p>
 </div>
 <div id="box">
+<!--
     <img id="program-dog" class="program-dog" src="../images/dog.gif">
     <img id="program-monkey" class="program-monkey" src="../images/monkey.gif">
     <img id="bottom0" class="bottom" src="../images/bottom.png">
@@ -82,6 +83,8 @@
     <img id="no2" class="no" src="../images/no.png">
 
     <img id="lost" class="lost" src="../images/lost.jpg">
+-->
+    <video src="../video/sliding1.mp4" id="video" class="video"></video>
 
 </div>
 <div id="actions-hide" class="panel-hide"><img class="rotateRight" src="./../images/arrow_white_right.png" alt="&gt;" ></div>
